<resources>
    <string name="app_name">PADC_WEEK6</string>
    <string name="action_settings">Settings</string>
    <string name="share_element_transistion_attractioin">share_element_transistion_attractioin</string>
    <string name="title_activity_left_menu">LeftMenuActivity</string>
    <string name="Attractions">Attractions</string>
    <string name="settings">settings</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="lbl_username">User Name</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_login_register">Register or Login</string>
    <string name="Logout">Logout</string>
    <string name="lbl_mail">Mail</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_dob">Date of Birth</string>
    <string name="lbl_region">region</string>
    <string name="lbl_name">Name</string>

</resources>
