<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_name"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2">

        <EditText
            android:id="@+id/et_user_mail_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_mail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2">

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2">

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_dob" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2">

        <EditText
            android:id="@+id/et_region"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_region" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2"
        android:text="@string/lbl_register" />

</LinearLayout>
